--- a/frontend/src/components/Dashboard.css
+++ b/frontend/src/components/Dashboard.css
@@ -1,10 +1,10 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Lemon&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Lemon&display=swap'); */
 
 
-body {
+/* body {
   font-family: 'lemon', cursive;
-}
+} */
 
 
 .title {
